# rapida-python

./: .gitignore  .gitmodules  .pypirc  Pipfile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-build.yml
rapida/: __init__.py  constants.py  rapida_client.py  rapida_client_options.py  values.py  version.py
rapida/agentkit/: __init__.py
rapida/artifacts/protos/: assistant_analysis_pb2.py  assistant_analysis_pb2.pyi  assistant_api_pb2.py  assistant_api_pb2.pyi  assistant_api_pb2_grpc.py  assistant_deployment_pb2.py  assistant_deployment_pb2.pyi  assistant_deployment_pb2_grpc.py  assistant_knowledge_pb2.py  assistant_knowledge_pb2.pyi  assistant_tool_pb2.py  assistant_tool_pb2.pyi  assistant_webhook_pb2.py  assistant_webhook_pb2.pyi  audit_logging_api_pb2.py  audit_logging_api_pb2.pyi  audit_logging_api_pb2_grpc.py  common_pb2.py  common_pb2.pyi  connect_api_pb2.py  connect_api_pb2.pyi  connect_api_pb2_grpc.py  document_api_pb2.py  document_api_pb2.pyi  document_api_pb2_grpc.py  (+36 more)
rapida/client/: rapida_bridge.py
rapida/clients/: __init__.py  assistant.py  call.py  endpoint.py  invoke.py
rapida/configs/: __init__.py
rapida/connections/: __init__.py
rapida/utils/: rapida_header.py  rapida_source.py  rapida_value.py
tests/: conftest.py  test_configs.py  test_connections.py  test_imports.py  test_proto_imports.py  test_version.py
tests/agentkit/: test_agentkit.py
tests/clients/: test_assistant.py  test_call.py  test_endpoint.py  test_invoke.py
tests/utils/: __init__.py  test_rapida_environment.py  test_rapida_header.py  test_rapida_region.py  test_rapida_source.py  test_rapida_value.py
(+77 files in other folders)
