[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rapida-python"
version = "0.1.17"
description = "RapidaAI SDK to integrate rapida.ai APIs"
readme = "README.md"
authors = [{name = "RapidaAI", email = "code@rapida.ai"}]
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9"
dependencies = [
       "protobuf",
        "grpcio",
        "grpcio-tools",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "flake8",
    "black",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/rapidaai/rapida-python"
"Bug Reports" = "https://github.com/rapidaai/rapida-python/issues"
Documentation = "https://rapida.ai/docs"
Source = "https://github.com/rapidaai/rapida-python"

[tool.setuptools]
packages = [
    "rapida",
    "rapida.clients",
    "rapida.clients.protos",
    "rapida.configs",
    "rapida.connections",
    "rapida.utils"
    # Add any other packages that should be included
]

[tool.setuptools.package-data]
"rapida" = ["py.typed"]
"rapida.clients.protos" = ["*.py"]

[tool.setuptools.exclude-package-data]
"*" = ["tests", "examples"]